toolchain/internal/core/analysis/testdata/errors/collisions/enum_pattern_collision.vdl
// @expect: E901
// Pattern collides with auto-generated StatusList from enum Status

enum Status {
  Active
  Inactive
}

pattern StatusList = "/api/status/{id}"
